--- a/src/Components/Spinner/spinner.css
+++ b/src/Components/Spinner/spinner.css
@@ -14,3 +14,8 @@
   border-radius: 50%;
   animation: spinner 1.5s linear infinite;
 }
+.center {
+  margin-left: 50%;
+  width: 50%;
+  padding: 50px;
+}
